# jiz

./: .gitignore  CMakeLists.txt  README.md
db/: create.sql  legacyView.sql  maxHour.sql  timetable_populate.sql
src/: databasewrapper.h  insertwidget.cpp  insertwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  pixelgrid.cpp  pixelgrid.h  tabletab.cpp  tabletab.h  tabletabdelegate.cpp  tabletabdelegate.h
ui/: insertwidget.ui  mainwindow.ui  tabletab.ui
